--- a/Demo git/home.html
+++ b/Demo git/home.html
@@ -11,5 +11,15 @@
 
 <h1>My First Heading:Đinh Xuân Cường - 2121050879</h1>
 <p>My first paragraph:Đinh Xuân Cường - 2121050879</p>
+<a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>Đinh Xuân Cường - 2121050879
+<p title=About W3Schools></p>Đinh Xuân Cường - 2121050879
+<img src="img_girl.jpg">Đinh Xuân Cường - 2121050879
+
+<h1>Heading 1 Đinh Xuân Cường - 2121050879</h1>
+<h2>Heading 2 Đinh Xuân Cường - 2121050879</h2>
+<h3>Heading 3 Đinh Xuân Cường - 2121050879</h3>
+<h4>Heading 4 Đinh Xuân Cường - 2121050879</h4>
+<h5>Heading 5 Đinh Xuân Cường - 2121050879</h5>
+<h6>Heading 6 Đinh Xuân Cường - 2121050879</h6>
 </body>
 </html>
