--- a/Demo git/home.html
+++ b/Demo git/home.html
@@ -13,7 +13,7 @@
 <p>My first paragraph:Đinh Xuân Cường - 2121050879</p>
 <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>Đinh Xuân Cường - 2121050879
 <p title=About W3Schools></p>Đinh Xuân Cường - 2121050879
-<img src="img_girl.jpg">Đinh Xuân Cường - 2121050879
+<img src="img_1.jpg">Đinh Xuân Cường - 2121050879
 
 <h1>Heading 1 Đinh Xuân Cường - 2121050879</h1>
 <h2>Heading 2 Đinh Xuân Cường - 2121050879</h2>
